// Copyright 2017 Capsule8 Inc. All rights reserved.

syntax = "proto3";

package capsule8.pubsub.v0;
option go_package = "github.com/capsule8/reactive8/pkg/api/pubsub";

import "google/api/annotations.proto";

//
// Capsule8 Pubsub API
//
// The Pubsub API is used by capsulators to publish and subscribe to typed messages
// for well defined topic names. Arbitrary types can be sent over non well defined topics.
//
service PubsubService {
    // Publishes a
    rpc Publish(PublishRequest) returns (PublishResponse) {
        option (google.api.http) = {
            post: "/v0/publish"
            body: "*"
        };
    }
    // Pulls messages off of a topic
    rpc Pull(stream PullRequest) returns (stream PullResponse) {
        option (google.api.http) = { 
            get: "/v0/pull" 
        };
    }
}

// Publishes a message to topic
message PublishRequest {
    string topic = 1;
    // Can publish one or more message(s) at a time
    repeated bytes messages = 2;
}

// PublishResponse returns any failed messages
message PublishResponse {
    repeated FailedMessage failed_messages = 1;
}

message FailedMessage {
    bytes payload = 1;
    string error = 2;
}

// Pull messages off a topic
message PullRequest {
    // Must be set on first request and omitted in subsequent requests
    string topic = 1;

    // Raw acks from one or more `ReceivedMessage`s
    repeated bytes acks = 2;
}

message PullResponse {
    repeated ReceivedMessage messages = 1;
}

message ReceivedMessage {
    bytes ack = 1;

    bytes payload = 2;
}
